Add all the diff from internal kotlin fork.
Test: busytown
Change-Id: I2755d8a41fa8afdc779f7902b0e747aac8baaae1

--- a/idea/resources/META-INF/plugin.xml
+++ b/idea/resources/META-INF/plugin.xml
@@ -1,4 +1,4 @@
-<idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude" version="2" url="http://kotlinlang.org" allow-bundled-update="true">
+<idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude" version="2" url="http://kotlinlang.org" allow-bundled-update="false">
   <id>org.jetbrains.kotlin</id>
 
   <name>Kotlin</name>
